--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@foxglove/ros1",
+  "name": "@lichtblick/ros1",
   "version": "3.0.0",
   "description": "Standalone TypeScript implementation of the ROS 1 (Robot Operating System) protocol with a pluggable transport layer",
   "license": "MIT",
@@ -15,13 +15,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/foxglove/ros1.git"
+    "url": "https://github.com/lichtblick-suite/ros1.git"
   },
   "author": {
-    "name": "Foxglove Technologies Inc",
-    "email": "contact@foxglove.dev"
+    "name": "Lichtblick",
+    "email": "lichtblick@bmwgroup.com"
   },
-  "homepage": "https://github.com/foxglove/ros1",
+  "homepage": "https://github.com/lichtblick/ros1",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "exports": {
@@ -50,10 +50,10 @@
     "node": ">= 14"
   },
   "devDependencies": {
-    "@foxglove/eslint-plugin": "0.21.0",
+    "@lichtblick/eslint-plugin": "1.0.1",
     "@types/jest": "^29.4.0",
-    "@typescript-eslint/eslint-plugin": "5.54.0",
-    "@typescript-eslint/parser": "5.54.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "esbuild": "0.17.10",
     "esbuild-runner": "2.2.2",
     "eslint": "8.35.0",
@@ -69,9 +69,9 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@foxglove/message-definition": "^0.2.0",
-    "@foxglove/rosmsg": "^4.0.0",
-    "@foxglove/rosmsg-serialization": "^2.0.0",
+    "@lichtblick/message-definition": "1.0.0",
+    "@lichtblick/rosmsg": "1.0.0",
+    "@lichtblick/rosmsg-serialization": "1.0.0",
     "@foxglove/xmlrpc": "^1.3.0",
     "eventemitter3": "^5.0.0",
     "ipaddr.js": "^2.0.1"
