--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/lichtblick-suite/ros1.git"
+    "url": "https://github.com/Lichtblick-Suite/ros1"
   },
   "author": {
     "name": "Lichtblick",
     "email": "lichtblick@bmwgroup.com"
   },
-  "homepage": "https://github.com/lichtblick-suite/ros1",
+  "homepage": "https://github.com/Lichtblick-Suite/ros1",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "exports": {
