--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "name": "Lichtblick",
     "email": "lichtblick@bmwgroup.com"
   },
-  "homepage": "https://github.com/Lichtblick-Suite/ros1",
+  "homepage": "https://github.com/Lichtblick-Suite",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "exports": {
@@ -72,7 +72,7 @@
     "@lichtblick/message-definition": "1.0.0",
     "@lichtblick/rosmsg": "1.0.0",
     "@lichtblick/rosmsg-serialization": "1.0.0",
-    "@foxglove/xmlrpc": "^1.3.0",
+    "@lichtblick/xmlrpc": "1.0.0",
     "eventemitter3": "^5.0.0",
     "ipaddr.js": "^2.0.1"
   },
